[package]
name = "bevy_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
bevy_renet = { version = "0.0.10", features = ["serde"] }
bevy =  { version = "0.12.1", features = ["dynamic_linking"] } 
bevy_egui = "0.24.0"
bevy_replicon = {version ="0.18.2"}
clap = "4.4.11"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
smooth-bevy-cameras = "0.10"

[dev-dependencies]
bevy_renet = { version = "0.0.10", features = ["serde"] }

[[example]]
name = "test_state"
path = "src/examples/test_state.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"